# food-graph

./: .eslintrc.cjs  .eslintrc.js  .gitignore  CONTRIBUTING.md  Makefile  README.md  nutrient_priority_recommendations.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_categories2.db  tsconfig.base.json  turbo.json
etl/: README.md  REFACTORING_SUMMARY.md  agents.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
etl/docs/: 00-overview.md  01-architecture.md  02-stages.md  03-configuration.md  04-schemas.md  05-testing.md  06-ci-cd.md  07-api-integration.md  08-curation-workflow.md  10-roadmap.md  TPT-ETL-Plan.md  evidence_validation_improvements.md  param-buckets.example.json
etl/evidence/: IMPLEMENTATION_SUMMARY.md  README.md  cleanup_rejected.sh  compute_rollup.py  db.py  db_utils.py  evidence_mapper.py  jsonl_utils.py  load_evidence.py  map.py  profiles.py  run_evidence_mapping.py  tpt_id_utils.py
etl/graph/: cli.py  config.py  db.py  io.py  logging.py
etl/lib/: __init__.py  config.py  db.py  io.py  logging.py  transform_utils.py  validators.py
etl/mise/: cli.py  config.py
etl/mise.egg-info/: PKG-INFO  SOURCES.txt
etl/py/: README.md  compile.py
etl/python/: compile.py  compile_docs.py  compile_taxa.py  validate_taxa.py
etl/scripts/: analyze_ontology_quality.py  fix-fungi-references.py  fix-plant-clade-nodes.py  fix-plant-rules-references.py  fix_ontology_quality.py  fix_orphaned_taxa.py  migrate-plant-clades.py  update_ontology_ncbi_ids.py  upgrade_evidence_prompts.py
etl2/: README.md  agents.md  pyproject.toml
(+601 files in other folders)
