[project]
name = "mise"
version = "0.1.0"
description = "Deterministic, Python-first ETL runner for the food graph"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.scripts]
mise = "mise.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
